--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">VOCALOID Ranking</string>
 
+    <string name="next">次へ</string>
+    <string name="prev">前へ</string>
+
     <string name="dummy_title">【初音ミク】ぽっぴっぽー【本店だよ！！】</string>
     <string name="dummy_view_counter">2536009</string>
     <string name="dummy_length">5:34</string>
