[add] progress dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="dummy_view_counter">2536009</string>
     <string name="dummy_length">5:34</string>
     <string name="dummy_publish_date">2008/12/11 00:42</string>
+  <string name="loading">読み込み中...</string>
 </resources>
